[package]
name = "valens-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
flate2 = "1.0.24"
quick-xml = "0.26.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
